Fix UniCloud URL in the .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 NEXTCLOUD_USERNAME=stepan.zapadlo
-NEXTCLOUD_URL=https://cloud.uni-graz.at/remote.php/dav/files/stepan.zapadlo/
+NEXTCLOUD_URL=https://cloud.uni-graz.at/
 NEXTCLOUD_PASSWORD=
