added new version of nextcloud data loader and example

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,10 @@
+# This assumes that the `.env` file is located in the base directory (next to the `data` directory and `tmp` directory)
+BASE_DIRECTORY=/opt/project/
+DATA_DIRECTORY=/data/
+TMP_DIRECTORY=/tmp/
+
 NEXTCLOUD_USERNAME=stepan.zapadlo
 NEXTCLOUD_URL=https://cloud.uni-graz.at/
 NEXTCLOUD_PASSWORD=
+
+DATASETS_DIRECTORY=AMML_shared/datasets/
