Update (recursive) handling of Pip requirements files

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,4 @@
+# To ensure correct handling of multiple requirements.txt files, we always include them
+-r base_requirements.txt
 # Only necessary for the example dataset!
 imageio
