--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -59,7 +59,7 @@ services:
         reservations:
           devices:
             - driver: nvidia
-              count: all
+              device_ids: ['4', '5', '6', '7']
               capabilities:
                 - gpu
     env_file: ".env"
